--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title> المرحوم اليوزغي صالح</title>
+		<title> صدقة جارية </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,11 +19,12 @@
 <section id="sec-1" class="section-block">
     <div class="container">
         <div data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000" class="logo aos-init aos-animate">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgJybmsxkKh3CnqYk9tigHNPt8aoLnHsu4yA&usqp=CAU">
+            <img src="https://yt3.googleusercontent.com/ytc/AL5GRJXYmzZJdsCphmB-84H8oYWvaPdfTky5VyzHOUJs_g=s900-c-k-c0x00ffffff-no-rj">
         </div>
         <div data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000" class="text aos-init aos-animate">
             <h2>: عن  </h2>
-            <h1>المرحوم اليوزغي صالح</h1>
+            <h1>االمرحوم عبد الرحمان</h1>
+		<h1>المرحومة يامنة</h1>
 <b>
 <font size="5">
 <script>
