--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section id="sec-1" class="section-block">
     <div class="container">
         <div data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000" class="logo aos-init aos-animate">
-            <img src="https://yt3.googleusercontent.com/ytc/AL5GRJXYmzZJdsCphmB-84H8oYWvaPdfTky5VyzHOUJs_g=s900-c-k-c0x00ffffff-no-rj">
+            <img src="https://pbs.twimg.com/profile_images/1311845084170723329/ZkJYfG8W_400x400.jpg">
         </div>
         <div data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000" class="text aos-init aos-animate">
             <h2>: عن  </h2>
