--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section id="sec-1" class="section-block">
     <div class="container">
         <div data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000" class="logo aos-init aos-animate">
-            <img src="https://pbs.twimg.com/profile_images/1311845084170723329/ZkJYfG8W_400x400.jpg">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgJybmsxkKh3CnqYk9tigHNPt8aoLnHsu4yA&usqp=CAU">
         </div>
         <div data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000" class="text aos-init aos-animate">
             <h2>: عن  </h2>
