--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 // ********** عدل هنا
 
-var text="اللهم ارحمه واغفر له ووثبته وارزقه الفردوس الأعلى واجعل قبره روضة من رياض الجنة" 
+var text="اللهم ارحمهما واغفر لهما ووثبتهما وارزقهما الفردوس الأعلى واجعل قبرهما روضة من رياض الجنة" 
 var speed=80 // سرعه تغير الالوان
 
 // ********** لا تعدل شي هنا
