--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
         <div data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000" class="text aos-init aos-animate">
             <h2>: عن  </h2>
-            <h1>االمرحوم عبد الرحمان</h1>
-		<h1>المرحومة يامنة</h1>
+            <h1>االمرحوم الحاج عبد الرحمان</h1>
+		<h1>المرحومةالحاجة يامنة</h1>
 <b>
 <font size="5">
 <script>
